<resources>
    <string name="app_name">Планер</string>
    <string name="activity_week">Неделя</string>
    <string name="activity_cal">Календарь</string>
    <string name="activity_trek">Трекер привычек</string>
    <string name="column1">ПН</string>
    <string name="column4">ЧТ</string>
    <string name="column5">ВТ</string>
    <string name="column8">ПТ</string>
    <string name="column9">СР</string>
    <string name="column12">СБ</string>
    <string name="column14">ВС</string>
    <string name="week_mn">пн</string>
    <string name="week_tu">вт</string>
    <string name="week_w">ср</string>
    <string name="week_th">чт</string>
    <string name="week_fr">пт</string>
    <string name="week_sat">сб</string>
    <string name="week_su">вс</string>
    <string name="tr_run">Бег</string>
    <string name="tr_ler">Учеба</string>
    <string name="tr_book">Книги</string>
    <string name="tr_engl">Английский</string>
    <string name="tr_exer">Тренировка</string>
    <string name="x">[X]</string>
    <string name="date">Date</string>
    <string name="textDay">TextDay</string>
    <string name="add">Add</string>
    <string name="base">БД</string>
    <string name="save">Save</string>
    <string name="exampleString">exampleString</string>
    <string name="vew">Custom Views</string>
    <string name="hello_custom_views">Hello Custom Views</string>
</resources>