<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayscale"
    tools:context="com.example.myappnew.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/week"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:background="@android:drawable/btn_default_small"
        android:gravity="center"
        android:onClick="sendWeek"
        android:text="@string/activity_week"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/calendar"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/btn_default_small"
        android:gravity="center"
        android:onClick="sendCalendar"
        android:text="@string/activity_cal"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:id="@+id/trek"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/btn_default_small"
        android:gravity="center"
        android:onClick="sendTrek"
        android:text="@string/activity_trek"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />

    <TextView
        android:id="@+id/test"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:background="@android:drawable/btn_default_small"
        android:gravity="center"
        android:onClick="sendAdd"
        android:text="@string/base"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trek" />


</androidx.constraintlayout.widget.ConstraintLayout>