<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayscale"
    android:orientation="horizontal"
    tools:context=".Activity_trek">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_mn"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/week_th"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_tu"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_th"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_w"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_tu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_th"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/week_tu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_fr"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/week_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_sat"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_su"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/week_sat"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/tr_run"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/tr_ler"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkBox21"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox22"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox23"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox24"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox25"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox26"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox27"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/tr_book"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkBox31"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox32"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox33"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox34"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox35"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox36"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox37"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/tr_engl"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkBox41"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox42"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox43"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox44"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox45"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox46"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox47"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView51"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/tr_exer"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkBox51"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox52"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox53"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox54"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox55"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox56"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox57"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>