<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayscale"
    tools:context=".Activity_week">

    <TableLayout
        android:id="@+id/week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:stretchColumns="*"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:background="@color/grayscale"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/grayscale"
                android:breakStrategy="high_quality"
                android:orientation="horizontal"
                android:text="@string/column1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textView3"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grayscale"
                android:breakStrategy="high_quality"
                android:text="@string/column4"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grayscale"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayscale"
                android:breakStrategy="high_quality"
                android:text="@string/column5"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/textView6"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:background="@android:drawable/btn_default_small"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textView7"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:background="@android:drawable/btn_default_small"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grayscale"
                android:breakStrategy="high_quality"
                android:text="@string/column8"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/grayscale"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayscale"
                android:text="@string/column9"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/textView10"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:background="@android:drawable/btn_default_small"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textView11"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:background="@android:drawable/btn_default_small"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayscale"
                android:breakStrategy="high_quality"
                android:text="@string/column12"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grayscale"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayscale"
                android:text="@string/column14"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/textView13"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_span="2"
                android:background="@android:drawable/btn_default_small"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayscale"
                android:breakStrategy="high_quality"
                android:text="@string/column14"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>